Changelog for Miosix np embedded OS

- Unified stm32f1 and stm32f2,f4,l1 serial port drivers. Now the
  driver for USART1 is DMA based also on the stm32f2 and f4.
- Fixed makefile dependencies to allow Miosix parallel builds with
  make -j4, make -j8, ... to speed up compilation on multicores.
- Restored support for DCC. It broke somewhere when transitioning to the
  new Device-based serial port drivers. Removed DCC support on stm32f4 as,
  due to OpenOCD limitations, it never actually worked.
- Removed the console interface (file interfaces/console.h).
- Factorized common code in the various stm32 serial port drivers. Work
  is still ongoing, as stm32f1 still has a different driver, and since
  DMA mode needs to be implemented.
- Fixed a null pointer dereference in Queue class.
- Fixed compiling kernel without WITH_FILESYSTEM
- Added class LPC2000Serial. The lpc2000 port no longer relies on
  the Console interface.
- Class TerminalDevice is no longer a proxy for a FileBase, but an adapter
  that allows to wrap a serial port, which has a Device interface into a
  FileBase interface.
- Removed class ConsoleDevice. The purpose of its interface is now carried
  out by the Device class of DevFs. This will allow to list serial ports
  among the devices of DevFs, and additionally results in code size reduction.
- Factorized common code in the various interrupts.h and interrupts.cpp from
  the various arch directories to miosix/common. Now all cortex bsps use the
  same code for handling fault interrupts, avoiding code duplication.
- Added forwarding of file mode in the open() syscall.
- Implemented may other syscalls.
- Rewritten syscall handling for processes. Fixed many vulnerabilites in the
  checking of syscall parameters.
- Fixed MPU size calculation, added _elf_pool_start and _elf_pool_end symbols
  that a linker script supporting processes must provide.
- Thread creation no longer calls errorHandler(OUT_OF_MEMORY) if there